; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-thread.c_thread_generic_wrapper.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-thread.c_thread_generic_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, void (i8*)*, i32, %struct.TYPE_3__*, i32, i32, i8* }

@TP_MAGIC = common dso_local global i64 0, align 8
@current = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @thread_generic_wrapper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thread_generic_wrapper(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca void (i8*)*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @TP_MAGIC, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load void (i8*)*, void (i8*)** %16, align 8
  store void (i8*)* %17, void (i8*)** %4, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 6
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %5, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 5
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @set_current_state(i32 %23)
  %25 = load i64, i64* @current, align 8
  %26 = inttoptr i64 %25 to i32*
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 4
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @PRIO_TO_NICE(i32 %29)
  %31 = call i32 @set_user_nice(i32* %26, i32 %30)
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 3
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %33, align 8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @kmem_free(%struct.TYPE_3__* %34, i32 %37)
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %40 = call i32 @kmem_free(%struct.TYPE_3__* %39, i32 48)
  %41 = load void (i8*)*, void (i8*)** %4, align 8
  %42 = icmp ne void (i8*)* %41, null
  br i1 %42, label %43, label %46

43:                                               ; preds = %1
  %44 = load void (i8*)*, void (i8*)** %4, align 8
  %45 = load i8*, i8** %5, align 8
  call void %44(i8* %45)
  br label %46

46:                                               ; preds = %43, %1
  ret i32 0
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @set_current_state(i32) #1

declare dso_local i32 @set_user_nice(i32*, i32) #1

declare dso_local i32 @PRIO_TO_NICE(i32) #1

declare dso_local i32 @kmem_free(%struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
